--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,12 @@ spring.datasource.url=jdbc:h2:mem:practice_db
 spring.datasource.username=sa
 spring.datasource.password=123456
 spring.datasource.driverClassName=org.h2.Driver
-
 spring.datasource.sql-script-encoding=UTF-8
 spring.datasource.initialization-mode=always
+
+#H2 web console enabled
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 #Hibernate configuration
 spring.jpa.hibernate.ddl-auto=create-drop
