свойство ddl-auto изменено на update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 #Hibernate configuration
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 #Tracing SQL-statements
 #spring.jpa.hibernate.show_sql=true
